# steady-state-stack

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  build_aeronmd.sh  build_ignore_contex.sh  build_ignore_context_files.sh  cargo-context-ranger  install_promethus.sh  install_victoria_metrics.sh  intro_doc.md  lesson-on-actor-testing.md  lesson-on-bundles.md  lesson-on-steadystate.md  lesson-on-testing.md  lesson-on-troups.md  lesson-phase-transition-design-pattern.md  lesson=on-testing.md  pre-publish.ps1  pre-publish.sh  steady_state_manifesto.md  values.md
.github/: FUNDING.yml
backend/: .gitignore  Cargo.toml  README.md  build.rs
backend/examples/: global_supplychain.dot  inventory_engine.dot  personal_health.dot  renewable_energy.dot  smart_agriculture.dot  weather_system.dot
backend/examples/large_scale/: args.rs  main.rs
backend/examples/large_scale/actor/: data_generator.rs  data_process.rs  data_router.rs  data_user.rs
backend/examples/simple_widgets/: args.rs  main.rs
backend/examples/simple_widgets/actor/: data_approval.rs  data_consumer.rs  data_feedback.rs  data_generator.rs  example_empty_actor.rs
backend/src/: abstract_executor.rs  actor_builder.rs  actor_stats.rs  channel_builder.rs  channel_stats.rs  config.rs  dot.rs  graph_liveliness.rs  graph_testing.rs  lib.rs  loop_driver.rs  monitor.rs  serviced.rs  util.rs  yield_now.rs
backend/src/install/: container.rs  local_cli.rs  serviced.rs
backend/src/serialize/: byte_buffer_packer.rs
backend/src/telemetry/: metrics_collector.rs  metrics_server.rs  setup.rs
backend/static/telemetry/: dot-viewer.js  index.html  webworker.js
cargo-steady-init/: Cargo.toml
cargo-steady-init/src/: args.rs  extract_details.rs  main.rs  templates.rs
cargo-steady-init/templates/: file_actor.txt  file_args.txt  file_cargo.txt  file_main.txt  struct_channel_type.txt
cargo-steady-state/: .gitignore  Cargo.toml  README.md
cargo-steady-state/src/: args.rs  extract_details.rs  main.rs  templates.rs
cargo-steady-state/templates/: dockerfile.txt  file_actor.txt  file_args.txt  file_cargo.txt  file_gitignore.txt  file_main.txt
core/: .gitignore  Cargo.toml  Dockerfile.aeronmd_alpine  Dockerfile.aeronmd_debian  README.md  build.rs  build_for_pi.sh  graph_distributed.dot  graph_ros.dot  mutants.dot_unify.toml  mutants.toml
core/aeron_media_driver/: Dockerfile.aeronmd_alpine  Dockerfile.aeronmd_debian  Setup-AeronService.ps1  install_aeronmd.sh  readme.md  uninstall_aeronmd.sh
core/examples/: circle.dot  distributed_file_storage.dot  fizz-buzz.dot  high_durability.dot  high_performance.dot  pbft.dot  rt_streaming.dot  smart_grid.dot  smart_health.dot  virtual_events.dot
core/examples/fizz_buzz/: args.rs  main.rs
core/examples/fizz_buzz/actor/: console_printer.rs  div_by_3_producer.rs  div_by_5_producer.rs  error_logger.rs  fizz_buzz_processor.rs  timer_actor.rs
core/examples/high_durability/: args.rs  main.rs
core/examples/high_durability/actor/: final_consumer.rs  tick_consumer.rs  tick_generator.rs  tick_relay.rs
core/examples/high_performance/: args.rs  main.rs
core/examples/high_performance/actor/: final_consumer.rs  tick_consumer.rs  tick_generator.rs  tick_relay.rs
core/examples/large_scale/: args.rs  main.rs
core/examples/large_scale/actor/: data_generator.rs  data_process.rs  data_router.rs  data_user.rs
core/examples/simple_aeron_publisher/: main.rs
core/examples/simple_aeron_publisher/actor/: publisher.rs
core/examples/simple_aeron_subscriber/: main.rs
core/examples/simple_aeron_subscriber/actor/: subscriber.rs
core/examples/simple_distributed_aeron_client/: main.rs
core/examples/simple_distributed_aeron_client/actor/: consumer.rs
core/examples/simple_distributed_aeron_server/: main.rs
core/examples/simple_distributed_aeron_server/actor/: producer.rs
core/examples/simple_widgets/: args.rs  main.rs
core/examples/simple_widgets/actor/: data_approval.rs  data_consumer.rs  data_feedback.rs  data_generator.rs  example_empty_actor.rs
core/logs/: graph.dot
core/routing_service/aeron/: Dockerfile.aeronmd_alpine  Dockerfile.aeronmd_debian  README_windows.md  aeron_1_26.ps1  install_aeronmd.ps1  install_aeronmd.sh  update_sysctl.sh
core/routing_service/mqtt/: install_nanomq.ps1  install_nanomq.sh
core/src/: abstract_executor.rs  abstract_executor_async_std.rs  abstract_executor_embassy.rs  abstract_executor_nuclei.rs  abstract_executor_smol.rs  abstract_executor_tests.rs  actor_builder.rs  actor_builder_units.rs  actor_stats.rs  actor_stats_tests.rs  channel_builder.rs  channel_builder_lazy.rs  channel_builder_units.rs  channel_stats.rs  channel_stats_labels.rs  channel_stats_tests.rs  commander.rs  commander_context.rs  commander_monitor.rs  config.rs  core_rx.rs  core_rx_guard.rs  core_rx_stream.rs  core_tx.rs  core_tx_guard.rs  core_tx_stream.rs  dot.rs  dot_edge.rs  dot_node.rs  dot_unify.rs  expression_steady_eye.rs  graph_liveliness.rs  graph_testing.rs  inspect_short_bools.rs  lib.rs  logging_util.rs  loop_driver.rs  macros.rs  monitor.rs  monitor_telemetry.rs  (+16 more)
core/src/distributed/: aeron_channel.rs  aeron_channel_builder.rs  aeron_channel_structs.rs  aeron_distributed.rs  aeron_publish.rs  aeron_publish_bundle.rs  aeron_receiver.rs  aeron_sender.rs  aeron_subscribe.rs  aeron_subscribe_bundle.rs  aqueduct.rs  aqueduct_builder.rs  aqueduct_stream.rs  connection_string.md  distributed.rs  distributed_builder.rs  distributed_stream.rs  nanosec_util.rs  polling.rs  scheduling.rs  steady_stream.rs
core/src/install/: container.rs  local_cli.rs  serviced.rs
core/src/serialize/: byte_buffer_packer.rs  fast_protocol_packed.rs
core/src/telemetry/: metrics_collector.rs  metrics_server.rs  setup.rs
core/static/systemd/: install_aeronmd.sh  uninstall_aeronmd.sh
core/static/telemetry/: README.md  dot-viewer.css  dot-viewer.js  index.html  package.json  server.js  webworker.js
core/templates/: index.html.txt  webworker.js.txt
docs/: actor_lifecycle.md  channels.md  getting_started.md  testing.md
src/: args.rs  (+19 more)
(+114 files in other folders)
