[package]
name = "cargo-steady-init" # This name is crucial for Cargo to recognize the subcommand.
version = "0.0.1"
edition = "2021"
# Other metadata like authors, description, etc.

[dependencies]
# Here, list your dependencies.
steady_state   = "0.0.9"
structopt = "0.3.26"
flexi_logger = "0.27.4"
log = "0.4.21"
dot-parser = "0.1.3"
askama = "0.12.1"
structopt-derive = "0.4.18"





