[package]
name = "cargo-steady-state" # This name is crucial for Cargo to recognize the subcommand.
version = "0.2.4"
documentation = "https://docs.rs/cargo-steady-state/0.0.5/cargo-steady-state/"
edition = "2024"
description = "Code generator for steady_state projects based on a structured dot file."
license = "MIT"
repository = "https://github.com/kmf-lab/steady-state-stack"

[dependencies]
flexi_logger = "0.31.1"
log = "0.4.22"
dot-parser = "0.5.1"
askama = "0.14.0"
num-traits = "0.2.19"
clap = { version = "4.5.40", features = ["derive"] }
async-std = "1.13.1"  # Use clap with derive feature

[dev-dependencies]
colored = "3.0.0"



