[package]
name = "cargo-steady-state" # This name is crucial for Cargo to recognize the subcommand.
version = "0.2.8"
documentation = "https://docs.rs/cargo-steady-state/0.2.7/cargo-steady-state/"
edition = "2024"
description = "Code generator for steady_state projects based on a structured dot file."
license = "MIT"
repository = "https://github.com/kmf-lab/steady-state-stack"

[dependencies]
flexi_logger = "0.31"
log = "0.4"
dot-parser = "0.5"
askama = "0.15"
num-traits = "0.2"
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
colored = "3.0"



